--- a/aviator.yml
+++ b/aviator.yml
@@ -11,6 +11,7 @@ spruce:
           - management.yml.j2
           - reboot-web-management.yml.j2
           - reboot-worker-management.yml.j2
+          - reboot-worker-management-dev.yml.j2
     to: aviator_pipeline.yml
 fly:
   name: aws-concourse
