--- a/ci/meta.yml
+++ b/ci/meta.yml
@@ -238,31 +238,6 @@ meta:
                 --cli-read-timeout 600 \
               output.json
               cat output.json | jq -eC 'if .errorMessage? then true else error("Connection to internet not blocked") end'
-    reboot-worker-nodes:
-      task: reboot-worker-nodes
-      config:
-        platform: linux
-        image_resource:
-          type: docker-image
-          source:
-            repository: ((docker-awscli.repository))
-            version: ((docker-awscli.version))
-            tag: ((docker-awscli.version))
-        inputs:
-          - name: .aws
-        params:
-          AWS_PROFILE: ci
-          AWS_SHARED_CREDENTIALS_FILE: .aws/credentials
-          AWS_CONFIG_FILE: .aws/config
-        run:
-          path: sh
-          args:
-            - -exc
-            - |
-              for INSTANCE_ID in $(aws ec2 describe-instances --filters Name=tag:Name,Values=concourse-worker | jq -r '.Reservations[].Instances[].InstanceId');
-              do
-                aws autoscaling set-instance-health --instance-id $INSTANCE_ID --health-status Unhealthy
-              done
 
     reboot-web-nodes:
       task: reboot-web-nodes
@@ -314,10 +289,10 @@ meta:
             - -exc
             - |
               mkdir -p credentials
-              aws ssm get-parameter --name /ci/2f0968b1-63a9-a026-102c-36550c89e0ca-user --with-decryption > credentials/username
-              aws ssm get-parameter --name /ci/2f0968b1-63a9-a026-102c-36550c89e0ca-password --with-decryption > credentials/password
+              aws ssm get-parameter --name $USERNAME_KEY --with-decryption > credentials/username
+              aws ssm get-parameter --name $PASSWORD_KEY --with-decryption > credentials/password
 
-    reboot-worker-nodes-dev:
+    reboot-worker-nodes:
       task: reboot-worker-nodes
       config:
         platform: linux
@@ -334,12 +309,12 @@ meta:
           args:
             - -exc
             - |
-              curl -Lk -o fly.tgz https://github.com/concourse/concourse/releases/download/v6.1.0/fly-6.1.0-linux-amd64.tgz
+              curl -Lk -o fly.tgz "https://github.com/concourse/concourse/releases/download/v6.1.0/fly-6.1.0-linux-amd64.tgz"
               tar -xvf fly.tgz
               chmod +x fly
               USERNAME=$(cat credentials/username | jq -r '.Parameter.Value')
               PASSWORD=$(cat credentials/password | jq -r '.Parameter.Value')
-              ./fly --target concourse login --team-name main --concourse-url https://ci.wip.dataworks.dwp.gov.uk/ -k -u $USERNAME -p $PASSWORD
+              ./fly --target concourse login --team-name main --concourse-url $CONCOURSE_URI -k -u $USERNAME -p $PASSWORD
               ./fly --target concourse workers
               for worker in $(./fly --target concourse workers  --json | jq -r .[].name);
               do
