Reverting back to using management

--- a/ci/jobs/pull_request.yml
+++ b/ci/jobs/pull_request.yml
@@ -37,7 +37,7 @@ jobs:
           cp ../../../terraform-config/terraform.tf .
           cp ../../../terraform-config/terraform.tfvars .
           terraform init
-          terraform workspace show
+          terraform workspace select management
           export TF_VAR_packer_egress_test_zip="{base_path = \"../../../packer-egress-test-release\", version = \"$(cat ../../../packer-egress-test-release/version)\"}"
           terraform plan
       inputs:
