Adding Cognito user creation jobs
Signed-off-by: Chris Scott-Thomas <chris.scott-thomas@infinityworks.com>

--- a/ci/groups.yml
+++ b/ci/groups.yml
@@ -15,3 +15,7 @@ groups:
   - name: reboot-worker-nodes-dev
     jobs:
       - reboot-management-dev-worker-nodes
+  - name: user-creation
+    jobs:
+      - management-user-creation
+      - management-dev-user-creation
