--- a/ci/meta.yml
+++ b/ci/meta.yml
@@ -320,3 +320,39 @@ meta:
               do
                 ./fly --target concourse land-worker --worker $worker;
               done
+
+    create-users:
+      task: create-users
+      config:
+        platform: linux
+        image_resource:
+          type: docker-image
+          source:
+            repository: dwpdigital/awscli
+            version: 0.0.6
+            tag: 0.0.6
+        params:
+          AWS_ROLE_ARN: arn:aws:iam::((aws_account.management)):role/ci
+          AWS_DEFAULT_REGION: eu-west-2
+          COGNITO_USER_POOL: concourse
+          COGNITO_USERS_SECRET: /concourse/dataworks/concourse-cognito
+        run:
+          path: sh
+          args:
+            - -exc
+            - |
+              export AWS_DEFAULT_REGION
+              source /assume-role
+              set +x
+              COGNITO_USER_POOL=$(aws cognito-idp list-user-pools --max-results 20 | jq -r --arg COGNITO_USER_POOL "$COGNITO_USER_POOL" '.UserPools[] | select(.Name | test($COGNITO_USER_POOL)) | .Id')
+              aws secretsmanager get-secret-value --secret-id $COGNITO_USERS_SECRET --query SecretBinary --output text | base64 -D >> users.json
+              for COGNAME in $(cat users.json| jq -r '.Users[] | .Username');
+              do
+                COGEMAIL=$(cat users.json| jq -r --arg COGNAME "$COGNAME" '.Users[] | select(.Username | test($COGNAME)) | .email');
+                aws cognito-idp list-users --user-pool-id $COGNITO_USER_POOL | jq -r '.Users[] | .Username'
+                aws cognito-idp admin-create-user \
+                --user-pool-id $COGNITO_USER_POOL \
+                --username $COGNAME
+                --user-attributes Name=email,Value=$COGEMAIL \
+                --message-action SUPPRESS
+              done
