--- a/ci/resources.yml
+++ b/ci/resources.yml
@@ -1,24 +1,33 @@
 resources:
-- name: aws-concourse-pr
-  type: pull-request
-  source:
-    access_token: ((github_com.token))
-    repo: dwp/aws-concourse
-    uri: https://github.com/dwp/aws-concourse.git
-  check_every: 15m
-- name: aws-concourse
-  type: git
-  source:
-    branch: master
-    username: ((github_com.username))
-    password: ((github_com.token))
-    uri: https://github.com/dwp/aws-concourse.git
-  check_every: 15m
-- name: packer-egress-test-release
-  type: github-release
-  source:
-    owner: dwp
-    repository: packer-egress-test
-    access_token: ((github_com.token))
-  check_every: 720h
-
+  - name: aws-concourse-pr
+    type: pull-request
+    source:
+      access_token: ((github_com.token))
+      repo: dwp/aws-concourse
+      uri: https://github.com/dwp/aws-concourse.git
+    check_every: 15m
+  - name: aws-concourse
+    type: git
+    source:
+      branch: master
+      username: ((github_com.username))
+      password: ((github_com.token))
+      uri: https://github.com/dwp/aws-concourse.git
+    check_every: 15m
+  - name: packer-egress-test-release
+    type: github-release
+    source:
+      owner: dwp
+      repository: packer-egress-test
+      access_token: ((github_com.token))
+    check_every: 720h
+  - name: aws-concourse-users
+    type: git
+    source:
+      branch: master
+      private_key: ((svc-dip.private_key))
+      uri: git@github.ucds.io:dip/dataworks-secrets.git
+      path:
+        - concourse/dataworks/concourse-cognito/**
+    check_every: 720h
+    webhook_token: ((ucfs-github.webhook-token))
