Removed unused task
Signed-off-by: Chris Scott-Thomas <chris.scott-thomas@infinityworks.com>

--- a/ci/meta.yml
+++ b/ci/meta.yml
@@ -335,7 +335,7 @@ meta:
           COGNITO_USER_POOL: concourse
           COGNITO_USERS_SECRET: /concourse/dataworks/concourse-cognito
         inputs:
-          - name: credentials
+          - name: .aws
         run:
           path: sh
           args:
