--- a/aviator.yml
+++ b/aviator.yml
@@ -7,7 +7,13 @@ spruce:
         regexp: ".*yml"
       - with_in: ci/jobs/
         except:
-          - "*.yml.j2"
+          - management-dev.yml.j2
+          - management.yml.j2
+          - mgmt-dev-user-creation.yml.j2
+          - mgmt-user-creation.yml.j2
+          - reboot-web-management.yml.j2
+          - reboot-worker-management-dev.yml.j2
+          - reboot-worker-management.yml.j2
     to: aviator_pipeline.yml
 fly:
   name: aws-concourse
