--- a/ci/meta.yml
+++ b/ci/meta.yml
@@ -347,15 +347,52 @@ meta:
               set -x
               COGNITO_USER_POOL=$(aws cognito-idp list-user-pools --max-results 20 | jq -r --arg COGNITO_USER_POOL "$COGNITO_USER_POOL" '.UserPools[] | select(.Name | test($COGNITO_USER_POOL)) | .Id')
               aws secretsmanager get-secret-value --secret-id $COGNITO_USERS_SECRET --query SecretBinary --output text | base64 -d >> users.json
-              for COGNAME in $(cat users.json| jq -r '.Users[] | .Username');
+              for COGNAME in $(cat users.json| jq -r '.Users[] | .username');
               do
-                COGEMAIL=$(cat users.json| jq -r --arg COGNAME "$COGNAME" '.Users[] | select(.Username | test($COGNAME)) | .email');
+                COGEMAIL=$(cat users.json| jq -r --arg COGNAME "$COGNAME" '.Users[] | select(.username | test($COGNAME)) | .email');
+                COGPHONE=$(cat users.json| jq -r --arg COGNAME "$COGNAME" '.Users[] | select(.username | test($COGNAME)) | .phone');
                 aws cognito-idp list-users --user-pool-id $COGNITO_USER_POOL | jq -r '.Users[] | .Username' >> user.parse
                 if [[ -z $(grep ${COGNAME} user.parse) ]]; then
                     aws cognito-idp admin-create-user \
                     --user-pool-id $COGNITO_USER_POOL \
-                    --username $COGNAME
-                    --user-attributes Name=email,Value=$COGEMAIL \
+                    --username $COGNAME \
+                    --user-attributes Name=email,Value=$COGEMAIL Name=phone_number,Value="$COGPHONE" \
                     --message-action SUPPRESS
+                fi
+              done
+
+    delete-users:
+      task: delete-users
+      config:
+        platform: linux
+        image_resource:
+          type: docker-image
+          source:
+            repository: ((docker-awscli.repository))
+            version: ((docker-awscli.version))
+            tag: ((docker-awscli.version))
+        params:
+          AWS_PROFILE: ci
+          AWS_SHARED_CREDENTIALS_FILE: .aws/credentials
+          AWS_CONFIG_FILE: .aws/config
+          COGNITO_USER_POOL: concourse
+          COGNITO_USERS_SECRET: /concourse/dataworks/concourse-cognito
+        inputs:
+          - name: .aws
+        run:
+          path: sh
+          args:
+            - -exc
+            - |
+              set -x
+              COGNITO_USER_POOL=$(aws cognito-idp list-user-pools --max-results 20 | jq -r --arg COGNITO_USER_POOL "$COGNITO_USER_POOL" '.UserPools[] | select(.Name | test($COGNITO_USER_POOL)) | .Id')
+              aws secretsmanager get-secret-value --secret-id $COGNITO_USERS_SECRET --query SecretBinary --output text | base64 -d >> users.json
+              for COGNAME in $(cat users.json| jq -r '.Users[] | select(.disabled | test("true")) | .username');
+              do
+                aws cognito-idp list-users --user-pool-id $COGNITO_USER_POOL | jq -r '.Users[] | .Username' >> user.parse
+                if [[ -z $(grep ${COGNAME} user.parse) ]]; then
+                    aws cognito-idp admin-delete-user \
+                    --user-pool-id $COGNITO_USER_POOL \
+                    --username $COGNAME
                 fi
               done
