--- a/aviator.yml
+++ b/aviator.yml
@@ -9,8 +9,8 @@ spruce:
         except:
           - management-dev.yml.j2
           - management.yml.j2
-          - mgmt-dev-user-creation.yml.j2
-          - mgmt-user-creation.yml.j2
+          - mgmt-dev-user-admin.yml.j2
+          - mgmt-user-admin.yml.j2
           - reboot-web-management.yml.j2
           - reboot-worker-management-dev.yml.j2
           - reboot-worker-management.yml.j2
