Using correct parameter for phone verification
Signed-off-by: Chris Scott-Thomas <chris.scott-thomas@infinityworks.com>

--- a/ci/meta.yml
+++ b/ci/meta.yml
@@ -356,7 +356,7 @@ meta:
                     aws cognito-idp admin-create-user \
                     --user-pool-id $COGNITO_USER_POOL \
                     --username $COGNAME \
-                    --user-attributes Name=email,Value=$COGEMAIL Name=email_verified,Value=true Name=phone_number,Value=$COGPHONE Name=phone_verified,Value=true \
+                    --user-attributes Name=email,Value=$COGEMAIL Name=email_verified,Value=true Name=phone_number,Value=$COGPHONE Name=phone_number_verified,Value=true \
                     --desired-delivery-mediums SMS \
                     --message-action SUPPRESS
                 fi
