--- a/ci/meta.yml
+++ b/ci/meta.yml
@@ -385,7 +385,7 @@ meta:
           args:
             - -exc
             - |
-              set -x
+              set +x
               COGNITO_USER_POOL=$(aws cognito-idp list-user-pools --max-results 20 | jq -r --arg COGNITO_USER_POOL "$COGNITO_USER_POOL" '.UserPools[] | select(.Name | test($COGNITO_USER_POOL)) | .Id')
               aws secretsmanager get-secret-value --secret-id $COGNITO_USERS_SECRET --query SecretBinary --output text | base64 -d >> users.json
               for COGNAME in $(cat users.json| jq -r '.Users[] | select(.disabled | test("true")) | .username');
