--- a/ci/meta.yml
+++ b/ci/meta.yml
@@ -337,7 +337,7 @@ meta:
           AWS_CONFIG_FILE: .aws/config
           COGNITO_USER_POOL: concourse
           COGNITO_USERS_SECRET: /concourse/dataworks/concourse-cognito
-          MESSAGE_ACTION: RESEND
+          NOTIFY: true
         inputs:
           - name: .aws
         run:
@@ -345,21 +345,27 @@ meta:
           args:
             - -exc
             - |
-              set -x
+              set +x
               COGNITO_USER_POOL=$(aws cognito-idp list-user-pools --max-results 20 | jq -r --arg COGNITO_USER_POOL "$COGNITO_USER_POOL" '.UserPools[] | select(.Name | test($COGNITO_USER_POOL)) | .Id')
               aws secretsmanager get-secret-value --secret-id $COGNITO_USERS_SECRET --query SecretBinary --output text | base64 -d >> users.json
               aws cognito-idp list-users --user-pool-id $COGNITO_USER_POOL | jq -r '.Users[] | .Username' >> user.parse
-              for COGNAME in $(cat users.json| jq -r '.Users[] | .username');
+              for COGNAME in $(cat users.json| jq -r '.Users[] | select(.disabled | test("false")) | .username');
               do
                 COGEMAIL=$(cat users.json| jq -r --arg COGNAME "$COGNAME" '.Users[] | select(.username | test($COGNAME)) | .email');
                 COGPHONE=$(cat users.json| jq -r --arg COGNAME "$COGNAME" '.Users[] | select(.username | test($COGNAME)) | .phone');
-                if [[ -z $(grep ${COGNAME} user.parse) ]]; then
+                if [[ -z $(grep ${COGNAME} user.parse) ]] && [[ ${NOTIFY} == "false" ]]; then
                     aws cognito-idp admin-create-user \
                     --user-pool-id $COGNITO_USER_POOL \
                     --username $COGNAME \
-                    --user-attributes Name=email,Value=$COGEMAIL Name=email_verified,Value=true Name=phone_number,Value=$COGPHONE Name=phone_number_verified,Value=true \
-                    --desired-delivery-mediums SMS \
-                    --message-action $MESSAGE_ACTION
+                    --user-attributes Name=email,Value=$COGEMAIL Name=phone_number,Value=$COGPHONE Name=phone_number_verified,Value=true \
+                    --desired-delivery-mediums EMAIL \
+                    --message-action SUPPRESS
+                elif [[ -z $(grep ${COGNAME} user.parse) ]] && [[ ${NOTIFY} == "true" ]]; then
+                    aws cognito-idp admin-create-user \
+                    --user-pool-id $COGNITO_USER_POOL \
+                    --username $COGNAME \
+                    --user-attributes Name=email,Value=$COGEMAIL Name=phone_number,Value=$COGPHONE Name=phone_number_verified,Value=true \
+                    --desired-delivery-mediums EMAIL
                 fi
               done
 
@@ -386,7 +392,7 @@ meta:
           args:
             - -exc
             - |
-              set -x
+              set +x
               COGNITO_USER_POOL=$(aws cognito-idp list-user-pools --max-results 20 | jq -r --arg COGNITO_USER_POOL "$COGNITO_USER_POOL" '.UserPools[] | select(.Name | test($COGNITO_USER_POOL)) | .Id')
               aws secretsmanager get-secret-value --secret-id $COGNITO_USERS_SECRET --query SecretBinary --output text | base64 -d >> users.json
               aws cognito-idp list-users --user-pool-id $COGNITO_USER_POOL | jq -r '.Users[] | .Username' >> user.parse
