Adding Cognito user creation jobs (#142)
* Adding Cognito user creation jobs

Signed-off-by: Chris Scott-Thomas <chris.scott-thomas@infinityworks.com>

* using jinja templates

Signed-off-by: Chris Scott-Thomas <chris.scott-thomas@infinityworks.com>

* ignoring created yml

Signed-off-by: Chris Scott-Thomas <chris.scott-thomas@infinityworks.com>

* Added new jinja templates

Signed-off-by: Chris Scott-Thomas <chris.scott-thomas@infinityworks.com>

* User creation jobs jinja templates

Signed-off-by: Chris Scott-Thomas <chris.scott-thomas@infinityworks.com>

* ignoring created yml

Signed-off-by: Chris Scott-Thomas <chris.scott-thomas@infinityworks.com>

* Removed unused task

Signed-off-by: Chris Scott-Thomas <chris.scott-thomas@infinityworks.com>

* Use generated creds

Signed-off-by: Chris Scott-Thomas <chris.scott-thomas@infinityworks.com>

* If statement, so we only add non-existing users

Signed-off-by: Chris Scott-Thomas <chris.scott-thomas@infinityworks.com>

* If statement, so we only add non-existing users, properly

Signed-off-by: Chris Scott-Thomas <chris.scott-thomas@infinityworks.com>

* Renamed jobs.  Added delete user job

Signed-off-by: Chris Scott-Thomas <chris.scott-thomas@infinityworks.com>

* Renamed jobs.  Added delete user job

Signed-off-by: Chris Scott-Thomas <chris.scott-thomas@infinityworks.com>

* Auto validate email & phone.  Prefer send by SMS

Signed-off-by: Chris Scott-Thomas <chris.scott-thomas@infinityworks.com>

* trailing whitespace

Signed-off-by: Chris Scott-Thomas <chris.scott-thomas@infinityworks.com>

* Using correct parameter for phone verification

Signed-off-by: Chris Scott-Thomas <chris.scott-thomas@infinityworks.com>

* Debug mode off

Signed-off-by: Chris Scott-Thomas <chris.scott-thomas@infinityworks.com>

* Debug mode off

Signed-off-by: Chris Scott-Thomas <chris.scott-thomas@infinityworks.com>

* Fixed resource

Signed-off-by: Chris Scott-Thomas <chris.scott-thomas@infinityworks.com>

* For loop doing the right things

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,5 @@ ci/jobs/management.yml
 ci/jobs/reboot-web-management.yml
 ci/jobs/reboot-worker-management.yml
 ci/jobs/reboot-worker-management-dev.yml
+ci/jobs/mgmt-user-admin.yml
+ci/jobs/mgmt-dev-user-admin.yml
