--- a/ci/groups.yml
+++ b/ci/groups.yml
@@ -15,3 +15,7 @@ groups:
   - name: reboot-worker-nodes-dev
     jobs:
       - reboot-management-dev-worker-nodes
+  - name: user-administration
+    jobs:
+      - management-user-admin
+      - management-dev-user-admin
