--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -35,7 +35,7 @@ jobs:
         run: python bootstrap_terraform.py
         working-directory: .
         env:
-          AWS_ROLE_ARN: ${{ secrets.AWS_GHA_ROLE_MGMT }}
+          AWS_ROLE_ARN: ${{ secrets.AWS_GHA_ROLE_MGMT_DEV }}
           AWS_DEFAULT_REGION: eu-west-2
 
       - name: "Terraform Format"
