run terraform as user, not role
Signed-off-by: danhill <danhill@digital.uc.dwp.gov.uk>

--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -10,15 +10,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: aws-actions/configure-aws-credentials@v1
-        with:
-          aws-access-key-id: ${{ secrets.ACTIONS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.ACTIONS_SECRET_ACCESS_KEY }}
-          aws-region: eu-west-2
-          role-to-assume: ${{ secrets.AWS_GHA_ROLE_MGMT_DEV }}
-          role-external-id: ${{ secrets.AWS_GHA_EXTERNAL_ID }}
-          role-duration-seconds: 3600
-          role-session-name: Concourse-GHA
       - uses: hashicorp/setup-terraform@v1
         with:
           terraform_version: 0.12.19
@@ -35,6 +26,8 @@ jobs:
         run: python bootstrap_terraform.py
         working-directory: .
         env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.ACTIONS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.ACTIONS_SECRET_ACCESS_KEY }}
           AWS_DEFAULT_REGION: eu-west-2
 
       - name: "Terraform Format"
@@ -47,6 +40,9 @@ jobs:
         run: terraform init
         env:
           TF_LOG: DEBUG
+          AWS_ACCESS_KEY_ID: ${{ secrets.ACTIONS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.ACTIONS_SECRET_ACCESS_KEY }}
+          AWS_DEFAULT_REGION: eu-west-2
 
       - name: "Terraform Plan"
         id: plan
@@ -54,3 +50,6 @@ jobs:
         continue-on-error: true
         env:
           TF_WORKSPACE: management
+          AWS_ACCESS_KEY_ID: ${{ secrets.ACTIONS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.ACTIONS_SECRET_ACCESS_KEY }}
+          AWS_DEFAULT_REGION: eu-west-2
