--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -42,6 +42,7 @@ jobs:
         run: terraform init
         env:
           TF_LOG: DEBUG
+          TF_VAR_assume_role: ${{ secrets.AWS_GHA_ROLE_MGMT_DEV }}
           AWS_ACCESS_KEY_ID: ${{ secrets.ACTIONS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.ACTIONS_SECRET_ACCESS_KEY }}
           AWS_DEFAULT_REGION: eu-west-2
@@ -52,6 +53,7 @@ jobs:
         continue-on-error: true
         env:
           TF_WORKSPACE: management
+          TF_VAR_assume_role: ${{ secrets.AWS_GHA_ROLE_MGMT_DEV }}
           AWS_ACCESS_KEY_ID: ${{ secrets.ACTIONS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.ACTIONS_SECRET_ACCESS_KEY }}
           AWS_DEFAULT_REGION: eu-west-2
