--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -52,7 +52,7 @@ jobs:
         run: terraform plan
         continue-on-error: true
         env:
-          TF_WORKSPACE: management
+          TF_WORKSPACE: default
           TF_VAR_assume_role: ${{ secrets.AWS_GHA_ROLE_MGMT_DEV }}
           AWS_ACCESS_KEY_ID: ${{ secrets.ACTIONS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.ACTIONS_SECRET_ACCESS_KEY }}
