set role name (secret was an arn)
Signed-off-by: danhill <danhill@digital.uc.dwp.gov.uk>

--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -42,7 +42,7 @@ jobs:
         run: terraform init
         env:
           TF_LOG: DEBUG
-          TF_VAR_assume_role: ${{ secrets.AWS_GHA_ROLE_MGMT_DEV }}
+          TF_VAR_assume_role: gha_aws_concourse
           AWS_ACCESS_KEY_ID: ${{ secrets.ACTIONS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.ACTIONS_SECRET_ACCESS_KEY }}
           AWS_DEFAULT_REGION: eu-west-2
@@ -53,7 +53,7 @@ jobs:
         continue-on-error: true
         env:
           TF_WORKSPACE: default
-          TF_VAR_assume_role: ${{ secrets.AWS_GHA_ROLE_MGMT_DEV }}
+          TF_VAR_assume_role: gha_aws_concourse
           AWS_ACCESS_KEY_ID: ${{ secrets.ACTIONS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.ACTIONS_SECRET_ACCESS_KEY }}
           AWS_DEFAULT_REGION: eu-west-2
