--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -50,7 +50,7 @@ jobs:
       - name: "Terraform Plan"
         id: plan
         run: terraform plan
-        continue-on-error: true
+        continue-on-error: false
         env:
           TF_WORKSPACE: default
           TF_VAR_assume_role: gha_aws_concourse
