remove plan for now
Signed-off-by: Chris Scott-Thomas <chris.scott-thomas@infinityworks.com>

--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -46,16 +46,16 @@ jobs:
           AWS_SECRET_ACCESS_KEY: ${{ secrets.ACTIONS_SECRET_ACCESS_KEY }}
           AWS_DEFAULT_REGION: eu-west-2
 
-      - name: "Terraform Plan"
-        id: plan
-        run: terraform plan
-        continue-on-error: false
-        env:
-          TF_WORKSPACE: default
-          TF_VAR_assume_role: gha_aws_concourse
-          AWS_ACCESS_KEY_ID: ${{ secrets.ACTIONS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.ACTIONS_SECRET_ACCESS_KEY }}
-          AWS_DEFAULT_REGION: eu-west-2
+      # - name: "Terraform Plan"
+      #   id: plan
+      #   run: terraform plan
+      #   continue-on-error: false
+      #   env:
+      #     TF_WORKSPACE: default
+      #     TF_VAR_assume_role: gha_aws_concourse
+      #     AWS_ACCESS_KEY_ID: ${{ secrets.ACTIONS_ACCESS_KEY_ID }}
+      #     AWS_SECRET_ACCESS_KEY: ${{ secrets.ACTIONS_SECRET_ACCESS_KEY }}
+      #     AWS_DEFAULT_REGION: eu-west-2
 
       - name: "Terraform Apply"
         id: apply
