--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -2,6 +2,7 @@ name: "Pull Request"
 on:
   pull_request:
     paths:
+      - ".github/pull-request.yml" #for testing
       - "terraform/**"
 defaults:
   run:
