--- a/ci/meta.yml
+++ b/ci/meta.yml
@@ -28,6 +28,7 @@ meta:
         AWS_ACCESS_KEY_ID: ((ci.aws_access_key_id))
         AWS_SECRET_ACCESS_KEY: ((ci.aws_secret_access_key))
         AWS_REGION: eu-west-2
+        AWS_SECRETS_ROLE: arn:aws:iam::((aws_account.management-dev)):role/ci
     terraform-apply:
       task: terraform-apply
       config:
