--- a/ci/jobs/pull_request.yml
+++ b/ci/jobs/pull_request.yml
@@ -1,60 +1,59 @@
 jobs:
-- name: aws-concourse-pr
-  plan:
-  - get: aws-concourse-pr
-    trigger: true
-    version: every
-  - get: packer-egress-test-release
-  - put: aws-concourse-pr
-    params:
-      context: $BUILD_JOB_NAME
-      path: aws-concourse-pr
-      status: pending
-  - .: (( inject meta.plan.terraform-bootstrap ))
-    input_mapping:
-      aws-concourse: aws-concourse-pr
-  - task: terraform-plan
-    config:
-      platform: linux
-      image_resource:
-        type: docker-image
-        source:
-          repository: ((terraform.repository))
-          version: ((terraform12.version))
-          tag: ((terraform12.version))
-      params:
-        AWS_ACCESS_KEY_ID: ((ci.aws_access_key_id))
-        AWS_SECRET_ACCESS_KEY: ((ci.aws_secret_access_key))
-        TF_INPUT: false
-        TF_CLI_ARGS_apply: -lock-timeout=300s
-        TF_CLI_ARGS_plan:  -lock-timeout=300s
-      run:
-        path: sh
-        dir: aws-concourse/terraform/deploy
-        args:
-        - -exc
-        - |
-          cp ../../../terraform-config/terraform.tf .
-          cp ../../../terraform-config/terraform.tfvars .
-          terraform init
-          terraform workspace select management
-          export TF_VAR_packer_egress_test_zip="{base_path = \"../../../packer-egress-test-release\", version = \"$(cat ../../../packer-egress-test-release/version)\"}"
-          terraform plan
-      inputs:
-      - name: aws-concourse
-      - name: terraform-config
-      - name: packer-egress-test-release
-    input_mapping:
-      aws-concourse: aws-concourse-pr
-    on_failure:
-      put: aws-concourse-pr
-      params:
-        context: $BUILD_JOB_NAME
-        path: aws-concourse-pr
-        status: failure
-    on_success:
-      put: aws-concourse-pr
-      params:
-        context: $BUILD_JOB_NAME
-        path: aws-concourse-pr
-        status: success
+  - name: aws-concourse-pr
+    plan:
+      - get: aws-concourse-pr
+        trigger: true
+        version: every
+      - put: aws-concourse-pr
+        params:
+          context: $BUILD_JOB_NAME
+          path: aws-concourse-pr
+          status: pending
+      - .: (( inject meta.plan.terraform-bootstrap ))
+        input_mapping:
+          aws-concourse: aws-concourse-pr
+        params:
+          AWS_SECRETS_ROLE: arn:aws:iam::((aws_account.management)):role/ci
+      - task: terraform-plan
+        config:
+          platform: linux
+          image_resource:
+            type: docker-image
+            source:
+              repository: ((terraform.repository))
+              version: ((terraform12.version))
+              tag: ((terraform12.version))
+          params:
+            AWS_ACCESS_KEY_ID: ((ci.aws_access_key_id))
+            AWS_SECRET_ACCESS_KEY: ((ci.aws_secret_access_key))
+            TF_INPUT: false
+            TF_CLI_ARGS_apply: -lock-timeout=300s
+            TF_CLI_ARGS_plan: -lock-timeout=300s
+          run:
+            path: sh
+            dir: aws-concourse/terraform/deploy
+            args:
+              - -exc
+              - |
+                cp ../../../terraform-config/terraform.tf .
+                cp ../../../terraform-config/terraform.tfvars .
+                terraform init
+                terraform workspace select management
+                terraform plan
+          inputs:
+            - name: aws-concourse
+            - name: terraform-config
+        input_mapping:
+          aws-concourse: aws-concourse-pr
+        on_failure:
+          put: aws-concourse-pr
+          params:
+            context: $BUILD_JOB_NAME
+            path: aws-concourse-pr
+            status: failure
+        on_success:
+          put: aws-concourse-pr
+          params:
+            context: $BUILD_JOB_NAME
+            path: aws-concourse-pr
+            status: success
