--- a/.github/workflows/tf-pull-request.yml
+++ b/.github/workflows/tf-pull-request.yml
@@ -8,8 +8,8 @@ defaults:
     working-directory: terraform/deploy/
 
 jobs:
-  terraform:
-    name: "Terraform"
+  pull-request:
+    name: "Terraform Pull Request"
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
