--- a/.github/workflows/tf-push.yml
+++ b/.github/workflows/tf-push.yml
@@ -8,8 +8,8 @@ defaults:
     working-directory: terraform/deploy/
 
 jobs:
-  terraform:
-    name: "Terraform"
+  push:
+    name: "On Terraform Push"
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
